<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardServicio"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="0dp"
        android:background="@drawable/card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:background="@drawable/btnazul"
            android:drawableLeft="@drawable/navaja"
            android:drawablePadding="10dp"
            android:drawableTint="#ffffff"
            android:padding="5dp"
            android:text="@string/label_nombser"
            android:textColor="#ffffff"
            android:textSize="16dp" />
        <EditText
            android:id="@+id/serv_edt_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@drawable/editextdesng"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:text="@string/label_duracion"
            android:textSize="16dp"
            android:padding="5dp"
            android:background="@drawable/btnazul"
            android:drawableLeft="@drawable/timer"
            android:drawablePadding="10dp"
            android:drawableTint="#ffffff"
            android:textColor="#ffffff"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/serv_edt_duracion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@drawable/editextdesng"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:text="@string/label_precio"
            android:textSize="16dp"
            android:padding="5dp"
            android:background="@drawable/btnazul"
            android:drawableLeft="@drawable/money"
            android:drawablePadding="10dp"
            android:drawableTint="#ffffff"
            android:textColor="#ffffff"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/serv_edt_precio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@drawable/editextdesng"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <Button
            android:id="@+id/serv_btnAgenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="9dp"
            android:background="@drawable/btnrojo"
            android:drawableLeft="@drawable/time"
            android:drawablePadding="10dp"
            android:drawableTint="#ffffff"
            android:text="@string/button_agenda"
            android:textColor="#ffffff" />

    </LinearLayout>

</android.support.v7.widget.CardView>